fully working before doing OptEdit_handler.java file